--- a/css/master.css
+++ b/css/master.css
@@ -1,66 +1,44 @@
-
   #stars01 {
-    background: url("../img/stars01.gif");
-    /*background-repeat: repeat;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    margin: auto;*/
-    background-attachment: fixed;
-    background-repeat: repeat;
-    background-position: center center;
-  }
-  /*h1 {
-  color: blue !important;
-  text-align: center;
-  display: inline;
-}
-
-h2 {
-  color: red !important;
-  text-align: center;
-  display: inline
-}*/
-  #torchleft {
-    width: 3em;
-    height: 3em;
-    overflow: auto;
-  }
-  #torchright {
-    width: 3em;
-    height: 3em;
-    overflow: auto;
-  }
-  #rsleft {
-    width: 3em;
-    height: 3em;
-    overflow: auto;
-  }
-  #rsright {
-    width: 3em;
-    height: 3em;
-    overflow: auto;
-  /*}
-  .jumbotron {
-    background-color: transparent !important;
-  }*/
-  /*.navbar-brand {
-  color: orange !important;
-}*/
-  /*#div01 {
-  overflow: auto;
-}*/
-  /*.navbar-inverse{
-  background-color: #F8F8F8;
-      border-color: #E7E7E7;
-}*/
-  /*
-
-#stars01 {
+  background: url("../img/stars01.gif");
+  /*background-repeat: repeat;
   width: 100%;
   height: 100%;
-  background-repeat: repeat-y;
-}*/
-  /*img {
+  text-align: center;
+  margin: auto;*/
+  background-attachment: fixed;
   background-repeat: repeat;
-}*/
+  background-position: center center;
+}
+.navbar-brand
+{
+    position: absolute;
+    width: 100%;
+    left: 0;
+    text-align: center;
+    margin:0 auto;
+}
+.navbar-toggle {
+    z-index:3;
+}
+#torchleft {
+  width: 3em;
+  height: 3em;
+  overflow: auto;
+}
+
+#torchright {
+  width: 3em;
+  height: 3em;
+  overflow: auto;
+}
+
+#rsleft {
+  width: 3em;
+  height: 3em;
+  overflow: auto;
+}
+
+#rsright {
+  width: 3em;
+  height: 3em;
+  overflow: auto;
