--- a/css/animate.css
+++ b/css/animate.css
@@ -22,7 +22,8 @@
 
 .animated.hinge {
   -webkit-animation-duration: 2s;
-  animation-duration: 2s;
+  animation-duration: 3s;
+  animation-delay: 3s;
 }
 
 .animated.flipOutX,
